fixed spacing between home/LI/LO buttons- need to fix CSS on sign up modal-maybe add modal to login

--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,4 +1,4 @@
-form {
+/* form {
     display: flex;
     justify-content: center;
-}
+} */
